--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.3",
-    "vite": "^4.4.5"
+    "baseline-browser-mapping": "^2.8.31",
+    "vite": "^7.2.4"
   }
 }
